--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,48 +30,84 @@
   margin-right: 0;
 }
 
+.panel-info {
+  border: none;
+  background-color: #f4f4f4;
+}
+.panel-info:not(:last-of-type) {
+  margin-bottom: 30px;
+}
+.panel-info:last-of-type {
+  margin-bottom: 0;
+}
+.panel-info .panel-heading {
+  letter-spacing: 0.08em;
+  color: #ffffff;
+  border: none;
+  background-color: #df8a13;
+  font-size: 1.25rem;
+}
+.panel-info .panel-body {
+  border: 1px solid #d5d5d5;
+  border-radius: 0 0 4px 4px;
+}
+
 html {
   font-size: 16px;
 }
 
 body {
-  font-size: 16px;
   font-family: "PT Sans", sans-serif;
+  font-size: 16px;
 }
 
 a {
   color: #165690;
 }
 a:hover, a:focus {
-  color: #df8a13;
   text-decoration: none;
+  color: #df8a13;
+}
+
+.header {
+  margin-bottom: 80px;
 }
 
 .header-logo {
-  text-align: center;
   padding: 100px 0;
+  text-align: center;
   background-image: url(../img/header-bg.jpg);
   background-position: center;
   background-size: cover;
 }
 .header-logo__title {
   display: block;
-  font-family: "PT Serif", serif;
-  color: #df8a13;
-  letter-spacing: 0.33em;
   margin-right: -0.33em;
+  letter-spacing: 0.33em;
+  color: #df8a13;
+  font-family: "PT Serif", serif;
 }
 .header-logo__description {
   display: block;
-  font-size: 1.15rem;
   letter-spacing: 0.2em;
   color: #ffffff;
+  font-size: 1.15rem;
 }
+
+.main {
+  margin-bottom: 80px;
+}
+
+.left-sidebar {
+  margin-bottom: 80px;
+}
+
 @media (min-width: 576px) {
   .header-logo__title {
     font-size: 3.5rem;
   }
 }
+
 @media (min-width: 768px) {
   .navbar-inverse .navbar-nav > li > a {
     border-radius: 4px;
@@ -83,6 +119,7 @@ a:hover, a:focus {
     margin: 5px 0 5px 5px;
   }
 }
+
 @media (max-width: 767.8px) {
   .navbar-left {
     margin-bottom: 0;
@@ -91,6 +128,7 @@ a:hover, a:focus {
     margin-top: 0;
   }
 }
+
 @media (max-width: 575.8px) {
   .header-logo__title {
     font-size: 2.5rem;
