--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,6 +52,10 @@
   border-radius: 0 0 4px 4px;
 }
 
+.input-lg, .input-group-lg > .form-control {
+  font-size: 0.875rem;
+}
+
 html {
   font-size: 16px;
 }
@@ -102,12 +106,18 @@ a:hover, a:focus {
   margin-bottom: 80px;
 }
 
+.vertical-slider {
+  overflow: hidden;
+  border-radius: 4px;
+}
+.vertical-slider__image {
+  width: 100%;
+}
 @media (min-width: 576px) {
   .header-logo__title {
     font-size: 3.5rem;
   }
 }
-
 @media (min-width: 768px) {
   .navbar-inverse .navbar-nav > li > a {
     border-radius: 4px;
@@ -119,7 +129,6 @@ a:hover, a:focus {
     margin: 5px 0 5px 5px;
   }
 }
-
 @media (max-width: 767.8px) {
   .navbar-left {
     margin-bottom: 0;
@@ -128,7 +137,6 @@ a:hover, a:focus {
     margin-top: 0;
   }
 }
-
 @media (max-width: 575.8px) {
   .header-logo__title {
     font-size: 2.5rem;
