--- a/assets/scss/_sidebar.scss
+++ b/assets/scss/_sidebar.scss
@@ -7,7 +7,6 @@
 
 .vertical-slider {
   overflow: hidden;
-
   border-radius: 4px;
 
   &__image {
@@ -18,9 +17,91 @@
 .user-login {
   position: relative;
 
-  $__tabs {
+  &__tabs {
     position: absolute;
     top: 0;
     right: $gap;
+    border: none;
+    margin-right: -5px;
+
+    a {
+      background-color: transparent !important;
+      border: none !important;
+      color: $color-gray;
+      padding: 14px 5px 12px !important;
+    }
+
+    .active a {
+      color: $color-white !important;
+    }
+  }
+}
+
+$image-size: 75px;
+$image-size-with-padding: $image-size + $gap-md;
+
+.site-news {
+}
+.panel {
+}
+.panel-info {
+}
+.panel-heading {
+}
+.panel-body {
+}
+.site-news-item {
+  clear: both;
+  position: relative;
+
+  &:not(:last-child) {
+    min-height: $image-size-with-padding;
+    margin-bottom: $gap;
+
+    &::after {
+      position: absolute;
+      right: 0;
+      bottom: -4px;
+      width: calc(100% - $image-size-with-padding);
+      height: 1px;
+      content: "";
+      background-color: #d5d5d5;
+    }
+  }
+
+  &:hover {
+    a {
+      color: $color-accent;
+    }
+
+    .thumbnail {
+      border-color: $color-accent;
+      background-color: $color-accent;
+    }
+  }
+
+  &__thumbnail {
+    float: left;
+    width: $image-size;
+    margin: 0 $gap-md $gap-md 0;
+  }
+
+  &__image {
+    width: 100%;
+  }
+
+  &__title {
+    margin-bottom: 0.5em;
+  }
+
+  &__link {
+    transition: color 0.25s;
+    @include block-shortener(1rem, 1.5, 50px, 2);
+  }
+
+  &__date {
+    text-align: right;
+    font-size: 0.8rem;
+    color: $color-gray-dark;
   }
 }
