--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -4,3 +4,36 @@
 .main {
   margin-bottom: $gap-xl;
 }
+
+.new-films {
+  margin-bottom: $gap-xl;
+
+  &-title {
+  }
+
+  &-row {
+    margin-right: -$gap-sm;
+    margin-left: -$gap-sm;
+    margin-bottom: -$gap;
+  }
+}
+
+.new-films-item {
+  padding-right: $gap-sm;
+  padding-left: $gap-sm;
+  margin-bottom: $gap;
+
+  &__thumbnail {
+    margin-bottom: 0;
+  }
+
+  &__image {
+  }
+
+  &__caption {
+  }
+
+  &__title {
+    @include text-shortener;
+  }
+}
