--- a/assets/scss/_sidebar.scss
+++ b/assets/scss/_sidebar.scss
@@ -5,6 +5,7 @@
   margin-bottom: $gap-xl;
 }
 
+// Slider Sidebar
 .vertical-slider {
   overflow: hidden;
   border-radius: 4px;
@@ -14,6 +15,7 @@
   }
 }
 
+// Login and Registration Sidebar
 .user-login {
   position: relative;
 
@@ -37,19 +39,10 @@
   }
 }
 
+// News Sidebar
 $image-size: 75px;
 $image-size-with-padding: $image-size + $gap-md;
 
-.site-news {
-}
-.panel {
-}
-.panel-info {
-}
-.panel-heading {
-}
-.panel-body {
-}
 .site-news-item {
   clear: both;
   position: relative;
@@ -104,4 +97,66 @@ $image-size-with-padding: $image-size + $gap-md;
     font-size: 0.8rem;
     color: $color-gray-dark;
   }
+}
+
+// Top Films Sidebar
+.top-films {
+  &__body {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  &__list {
+    margin-bottom: 0;
+  }
+
+  &__item {
+    background-color: transparent;
+    margin-left: -1px;
+    margin-right: -1px;
+    color: $color-primary !important;
+    padding-right: 55px;
+
+    &:first-child {
+      border-radius: 0;
+      border-top: 0;
+    }
+
+    &:last-child {
+      border-radius: 0;
+      border-bottom: none;
+    }
+
+    &:hover,
+    &:focus {
+      color: $color-white !important;
+      background-color: $color-accent !important;
+      border-color: $color-accent !important;
+
+      .badge {
+        background-color: $color-dark;
+      }
+    }
+  }
+
+  &__badge {
+    position: absolute;
+    right: $gap;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+}
+.panel {
+}
+.panel-info {
+}
+.panel-heading {
+}
+.panel-body {
+}
+.list-group {
+}
+.list-group-item {
+}
+.badge {
 }
