--- a/assets/scss/_page.scss
+++ b/assets/scss/_page.scss
@@ -1,2 +1,61 @@
 @use "presets/" as *;
 @use "mixins/" as *;
+
+.video-film {
+  h1::after {
+    content: "";
+    position: absolute;
+    border-bottom: 3px solid #f0ad4f;
+    width: 100%;
+    margin: 0.85em 0 0 $gap;
+  }
+}
+
+.embed-responsive {
+  border: 1px solid #d5d5d5;
+  border-bottom: none;
+  border-radius: 4px 4px 0 0;
+}
+
+.video-film-well {
+  font-size: 1.2em;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  margin-bottom: 35px;
+}
+
+.video-film-well-description {
+  &__badge {
+    font-size: 0.8em;
+  }
+}
+
+.description-film,
+.feedbacks-film {
+  h2 {
+    &::before {
+      content: "";
+      position: absolute;
+      left: 0;
+      width: 30px;
+      margin: 0.25em 0 0 0;
+      border-bottom: 3px solid #f0ad4f;
+    }
+    &::after {
+      content: "";
+      position: absolute;
+      width: 100%;
+      margin: 0.85em 0 0 15px;
+      border-bottom: 3px solid #f0ad4f;
+    }
+  }
+}
+
+.description-film-well {
+  margin-bottom: $gap;
+  margin-top: 35px;
+
+  p {
+    margin-bottom: 0;
+  }
+}
